@@ -3263,8 +3263,12 @@ void pure_sys_vars(void)
   cdf(interp, "SIZEOF_LONG_LONG",	pure_int(sizeof(long long)));
   cdf(interp, "SIZEOF_FLOAT",	pure_int(sizeof(float)));
   cdf(interp, "SIZEOF_DOUBLE",	pure_int(sizeof(double)));
+#ifdef HAVE__COMPLEX_FLOAT
   cdf(interp, "SIZEOF_COMPLEX_FLOAT",	pure_int(sizeof(_Complex float)));
+#endif
+#ifdef HAVE__COMPLEX_DOUBLE
   cdf(interp, "SIZEOF_COMPLEX_DOUBLE",	pure_int(sizeof(_Complex double)));
+#endif
   cdf(interp, "SIZEOF_POINTER",	pure_int(sizeof(void*)));
   // clock
   cdf(interp, "CLOCKS_PER_SEC",	pure_int(CLOCKS_PER_SEC));
