@@ -1,5 +1,8 @@
 2008-09-05  Albert Graef  <Dr.Graef@t-online.de>
 
+	* configure.ac, runtime.cc (pure_sys_vars): Add configure checks
+	for POSIX/ISOC99 complex types. (Requires reconfigure.)
+
 	* runtime.cc (pure_force): Fix a rather obscure segfault in the
 	thunk implementation. See also test/test023.pure.
 
